introduction mobile fix, background body img load fix

--- a/assets/bootstrap/variables.scss
+++ b/assets/bootstrap/variables.scss
@@ -4,4 +4,5 @@ $dark: #222121;
 $light: #494949;
 
 $backdrop: rgba(0, 0, 0, 0.6);
+$content-backdrop: rgba(0, 0, 0, 0.4);
 $primary-light: #c7bc9b;
